add .ini files and update readme

--- a/config/default/ping.ini
+++ b/config/default/ping.ini
@@ -1,5 +1,10 @@
-[ping_widget]
+[boolean - enable or not ping widget]
+enabled = true
+
+[integer - how many time websites will be pinged. Average ping will be displayed]
 ping_count = 2
+
+[array of string - website who will be pinged]
 ping_website[] = "github.com"
 ping_website[] = "gnu.org"
 ping_website[] = "wikipedia.org"
