Add websocket support to the client, in linuxDash.js Add websocket server implementation to index.js

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/afaqurk/linux-dash",
   "dependencies": {
-    "express": "^4.11.1"
+    "express": "^4.11.1",
+    "websocket": "^1.0.22"
   }
 }
