--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "linux-dash",
-  "version": "1.2.0",
+  "version": "1.6.0",
   "description": "A simple, low overhead web dashboard for linux.",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "webpack --progress --watch"
   },
   "repository": {
     "type": "git",
