--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "linux-dash",
   "version": "1.6.0",
   "description": "A simple, low overhead web dashboard for linux.",
-  "main": "server/index.js",
+  "main": "app/server/index.js",
   "scripts": {
-    "develop": "node ./server/ & webpack --progress --watch"
+    "develop": "node ./app/server/ & webpack --progress --watch --profile"
   },
   "repository": {
     "type": "git",
@@ -33,9 +33,10 @@
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "ngmin": "^0.5.0",
-    "ngmin-webpack-plugin": "^0.1.3",
+    "css-loader": "^0.23.1",
+    "ng-annotate-webpack-plugin": "^0.1.2",
     "smoothie": "^1.27.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   }
 }
