split the src files into their respective reasonable directories and individual component files

--- a/package.json
+++ b/package.json
@@ -34,6 +34,14 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "smoothie": "^1.27.0",
     "style-loader": "^0.13.1",
