--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple, low overhead web dashboard for linux.",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
