--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "A simple, low overhead web dashboard for linux.",
   "main": "app/server/index.js",
+  "bin": "bin/linux-dash",
   "repository": {
     "type": "git",
     "url": "https://github.com/afaqurk/linux-dash.git"
