--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server"
   },
+  "bin": "bin/linux-dash",
   "repository": {
     "type": "git",
     "url": "https://github.com/afaqurk/linux-dash.git"
