--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/afaqurk/linux-dash",
   "dependencies": {
     "express": "^4.11.1",
-    "websocket": "^1.0.23"
+    "websocket": "^1.0.23",
+    "yargs": "^8.0.1"
   },
   "devDependencies": {
     "angular": "1.3.4",
