--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
   "homepage": "https://github.com/afaqurk/linux-dash",
   "dependencies": {
     "express": "^4.11.1",
-    "websocket": "^1.0.23",
-    "yargs": "^8.0.1"
+    "websocket": "^1.0.31",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "angular": "1.3.4",
-    "angular-route": "1.3.4",
+    "angular": "^1.8.0",
+    "angular-route": "^1.3.4",
     "del": "^2.2.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
